# chesstacean

./: .gitignore  Cargo.toml  LICENSE.md  README.md  package-lock.json  package.json  planning.txt  todo.txt
public/: 404.html
public/css/: 404.css  index.css  login-signup.css  login.css  ntoast.css  side-window.css  vars.css
public/js/: board.js  camera.js  canvas.js  components.js  errors.js  game-popup.js  index.js  listeners.canvas.js  listeners.window.js  manager.board.js  manager.camera.js  manager.canvas.js  manager.piece.js  ntoast.js  nudge.js  pieces.js  point.js  side-window.js
public/js/modules/: ca.chesstacean.components.js  ca.chesstacean.deferred.js  ca.chesstacean.message.js  ca.chesstacean.network.js  ca.chesstacean.reply.js  ca.chesstacean.result.js  ca.chesstacean.router.js  ca.chesstacean.serde_json.js
public/js/web-components/: registry.js  util.js
public/pages/: index.html
public/pages/login/: index.html
public/pages/signup/: index.html
src/: chess.rs  lib.rs  main.rs  server.rs  traits.rs  word_loader.rs
src/chess/: board.rs  controller.rs  game.rs  network.rs  pieces.rs  user.rs
src/chess/board/: tiles.rs
src/chess/game/: board.rs  network.rs  pieces.rs  player.rs
src/public/: index.css  index.html  index.js
src/public/modules/: ca.chesstacean.event.js  ca.chesstacean.network.js  ca.chesstacean.result.js  com.chesstacean.result.js
src/server/: console.rs  database.rs  routes.rs  tokens.rs  user.rs  utils.rs  ws.rs
src/server/database/: auth.rs  games.rs  (+1 more)
util/word_lists/: adjectives.txt  nouns.txt  verbs.txt
(+11 files in other folders)
