[package]
name = "chesstacean"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = {version = "0.3.6", features = ["tls"]}
tokio = { version = "1", features = ["full"] }
futures-util = "0.3.29"
argon2 = "0.5.2"
rusqlite = {version="0.30.0", features = ["bundled"]}
dotenvy = "0.15.7"
jwt = "0.16.0"
